--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "customize-cra": "^0.2.12",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
